<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <ImageView
        android:id="@+id/admin_image_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:background="#EEEEEE"
        android:contentDescription="Event Poster" />

    <ImageView
        android:id="@+id/delete_image_button"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_gravity="top|start"
        android:layout_margin="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="Delete Image"
        android:src="@drawable/delete" />

</FrameLayout>