...
        android:orientation="vertical"
        android:layout_toEndOf="@id/profile_icon"
        android:layout_marginStart="16dp"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />
...
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/delete_profile_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/delete"
            android:padding="4dp"
            android:contentDescription="@string/acc_delete_profile_row" />

...
